# CallsTrend

./: README.md  pyproject.toml
src/callstrend/: main.py
src/callstrend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/callstrend/api/: dependencies.py  schemas.py
src/callstrend/api/doc/: swagger.md
src/callstrend/api/routes/: health.py  tickets.py
src/callstrend/application/: dto.py  exceptions.py  use_cases.py
src/callstrend/application/services/: keyword_classifier.py
src/callstrend/domain/: enums.py  models.py  ports.py
src/callstrend/infrastructure/repositories/: in_memory_ticket_repository.py
tests/: test_ticket_flow.py
