[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "callstrend"
version = "0.1.0"
description = "POC de help desk com triagem automática de chamados"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn==0.46.0",
]

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "pytest==9.0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
